--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "react-scripts start"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
