--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "globals": "^16.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup": "^3.29.5",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.8.3",
