--- a/src/services/netlify.toml
+++ b/src/services/netlify.toml
@@ -3,3 +3,8 @@
   to = "https://emory-server-406346608321.asia-northeast3.run.app/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
